fix(all): removed visibility CSS for JAWS bug

--- a/src/patternfly/components/Form/form.scss
+++ b/src/patternfly/components/Form/form.scss
@@ -365,7 +365,6 @@ $pf-c-form--m-horizontal--breakpoint-map: build-breakpoint-map("sm", "md", "lg",
 
   &.pf-m-inactive {
     display: none;
-    visibility: hidden;
   }
 
   &.pf-m-hidden {
