--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -304,7 +304,6 @@
 
       &:not(.pf-m-current-path) .pf-c-menu {
         display: none;
-        visibility: hidden;
       }
     }
 
