--- a/src/patternfly/components/Switch/switch.scss
+++ b/src/patternfly/components/Switch/switch.scss
@@ -102,7 +102,6 @@
     ~ .pf-c-switch__toggle {
       .pf-c-switch__toggle-icon {
         display: none;
-        visibility: hidden;
       }
     }
 
