--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -1229,7 +1229,6 @@
 
   &:not(.pf-m-expanded) {
     display: none;
-    visibility: hidden;
   }
 }
 
